# Black76_on_WTI_Futures

./: README.md  wti-black76.cabal
asm/: Makefile  gbm_kernel.s  libsimd_mc.dylib  simd_core.s  simd_mc.s  test_simd  test_simd.c
mojo/: bridge.mojo  ffi_test.mojo  simd_bridge.mojo
plots/: generate_plots.py
src/: Black76.hs  DataLoader.hs  HedgeSim.hs  Main.hs  MojoBridge.hs
test/: Black76Tests.hs  HedgeSimSpec.hs  MojoBridgeSpec.hs
